...
                                    Button {
                                        withAnimation(.default, {
                                            mainViewController.viewState = .patientHome
                                        })
                                    } label: {
                                        HStack {
                                            Text("Back").font(.system(size: 30))
                                                .foregroundColor(Color.black)
                                        }.frame(width: geoProxy2.size.width * 0.15, height: geoProxy2.size.height * 0.25)
                                    }.background(Color.white)
                                        .cornerRadius(15)
                                    Spacer().frame(width: 50)
                                }
...
                                    Button {
                                        withAnimation(.default, {
                                            mainViewController.viewState = .patientSecurity
                                        })
                                    } label: {
                                        HStack {
                                            Text("Security").font(.system(size: 30))
                                                .foregroundColor(Color.black)
                                        }.frame(width: geoProxy2.size.width * 0.7, height: geoProxy2.size.height * 0.13)
                                    }.background(Color.white)
                                        .cornerRadius(15)
                                }
                                Spacer()
...
                                        Group {
                                            Spacer().frame(height: geoProxy.size.height*0.03)
                                            HStack {
                                                Text("Personal Infomation").font(.title).bold()
                                            }
                                            HStack {
                                                Text("First Name:")
                                                    .font(.title2)
                                                    .frame(alignment: .leading)
                                                
                                                TextField("\(loginController.fname)", text: $firstName)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
                                            HStack {
                                                Text("Last Name:")
                                                    .font(.title2)
                                                
                                                TextField("\(loginController.lname)", text: $lastName)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
                                            HStack {
                                                Text("Date of Birth:")
                                                    .font(.title2).frame(alignment: .leading)
                                                
                                                TextField("\(loginController.dob)", text: $dateOfBirth)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
                                            HStack {
                                                Text("Age:")
                                                    .font(.title2).frame(alignment: .leading)
                                                
                                                TextField("\(loginController.age)", text: $age)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
...
                                            HStack {
                                                Text("Address Infomation")
                                                    .font(.title)
                                                    .bold()
                                            }
                                            HStack {
                                                Text("State:")
                                                    .font(.title2)
                                                
                                                TextField("\(loginController.state)", text: $state)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
                                            HStack {
                                                Text("City:")
                                                    .font(.title2)
                                                
                                                TextField("\(loginController.city)", text: $city)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
                                            HStack {
                                                Text("Country:")
                                                    .font(.title2)
                                                
                                                TextField("\(loginController.country)", text: $country)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
...
                                            HStack {
                                                Text("Contact Infomation")
                                                    .font(.title)
                                                    .bold()
                                            }
                                            HStack {
                                                Text("Phone Number:")
                                                    .font(.title2)
                                                
                                                TextField("\(loginController.pnumber)", text: $phNumber)
                                                    .textFieldStyle(RoundedBorderTextFieldStyle())
                                                    .frame(width: 500, height: 10)
                                            }
...
