...
                                    Button {
                                        withAnimation(.default, {
                                            mainViewController.viewState = .patientProfile
                                        })
                                    } label: {
                                        HStack {
                                            Text("Profile").font(.system(size: 30))
                                                .foregroundColor(Color.black)
                                        }.frame(width: geoProxy2.size.width * 0.15, height: geoProxy2.size.height * 0.25)
                                    }.background(Color.white)
                                        .cornerRadius(10)
                                    Spacer().frame(width: 50)
                                }
...
                                    Spacer()
                                    Button {
                                        self.addRecord.toggle()
                                        mainViewController.viewState = .highlightAreaPage
                                    } label: {
                                        HStack {
                                            Image("Plus_Icon")
                                                .resizable()
                                                .frame(width: geoProxy2.size.width*0.06, height: geoProxy2.size.height*0.05)
                                        }.padding()
                                    }.background(Color.init(hex: "A8DADC"))
                                        .cornerRadius(15)
                                    Spacer()
...
