...
                                                     state: self.state,
                                                     city: self.city,
                                                     pnumber: self.pnumber,
                                                     country: self.country)
                    
                } label: {
                    Text("Complete Registration")
                        .font(.largeTitle)
                        .foregroundColor(Color.white)
                        .frame(width: geoProxy.size.width * 0.3, height: geoProxy.size.height * 0.075)
                    
                }
                .background(Color.init(hex: "457B9D"))
...
